--- a/web/.htaccess
+++ b/web/.htaccess
@@ -10,7 +10,7 @@
 # mod_rewrite). Additionally, this reduces the matching process for the
 # start page (path "/") because otherwise Apache will apply the rewriting rules
 # to each configured DirectoryIndex file (e.g. index.php, index.html, index.pl).
-DirectoryIndex iumio_prod.php
+DirectoryIndex iumio_dev.php
 
 # By default, Apache does not evaluate symbolic links if you did not enable this
 # feature in your server configuration. Uncomment the following line if you
@@ -19,7 +19,7 @@ DirectoryIndex iumio_prod.php
 # Options FollowSymlinks
 
 # Disabling MultiViews prevents unwanted negotiation, e.g. "/apps" should not resolve
-# to the front controller "/iumio_prod.php" but be rewritten to "/iumio_prod.php/app".
+# to the front controller "/iumio_dev.php" but be rewritten to "/iumio_dev.php/app".
 <IfModule mod_negotiation.c>
     Options -MultiViews
 </IfModule>
@@ -30,7 +30,7 @@ DirectoryIndex iumio_prod.php
     # Determine the RewriteBase automatically and set it as environment variable.
     # If you are using Apache aliases to do mass virtual hosting or installed the
     # project in a subdirectory, the base path will be prepended to allow proper
-    # resolution of the iumio_prod.php file and to redirect to the correct URI. It will
+    # resolution of the iumio_dev.php file and to redirect to the correct URI. It will
     # work in environments without path prefix as well, providing a safe, one-size
     # fits all solution. But as you do not need it in this case, you can comment
     # the following 2 lines to eliminate the overhead.
@@ -42,7 +42,7 @@ DirectoryIndex iumio_prod.php
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
     # Redirect to URI without front controller to prevent duplicate content
-    # (with and without `/iumio_prod.php`). Only do this redirect on the initial
+    # (with and without `/iumio_dev.php`). Only do this redirect on the initial
     # rewrite by Apache and not on subsequent cycles. Otherwise we would get an
     # endless redirect loop (request -> rewrite to front controller ->
     # redirect -> request -> ...).
@@ -53,7 +53,7 @@ DirectoryIndex iumio_prod.php
     # - use Apache >= 2.3.9 and replace all L flags by END flags and remove the
     #   following RewriteCond (best solution)
     RewriteCond %{ENV:REDIRECT_STATUS} ^$
-    RewriteRule ^iumio_prod\.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]
+    RewriteRule ^iumio_dev\.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]
 
     # If the requested filename exists, simply serve it.
     # We only want to let Apache serve files and not directories.
@@ -61,7 +61,7 @@ DirectoryIndex iumio_prod.php
     RewriteRule .? - [L]
 
     # Rewrite all other queries to the front controller.
-    RewriteRule .? %{ENV:BASE}/iumio_prod.php [L]
+    RewriteRule .? %{ENV:BASE}/iumio_dev.php [L]
 </IfModule>
 
 <IfModule !mod_rewrite.c>
@@ -69,7 +69,7 @@ DirectoryIndex iumio_prod.php
         # When mod_rewrite is not available, we instruct a temporary redirect of
         # the start page to the front controller explicitly so that the website
         # and the generated links can still be used.
-        RedirectMatch 302 ^/$ /iumio_prod.php/
+        RedirectMatch 302 ^/$ /iumio_dev.php/
         # RedirectTemp cannot be used instead
     </IfModule>
 </IfModule>
