Introducing to iumioEngineAutoloader to improve performance

--- a/elements/config_files/apps.json
+++ b/elements/config_files/apps.json
@@ -1,1 +1,1 @@
-{"0":{"name":"HelloApp","isdefault":"yes","class":"\\HelloApp\\HelloApp"}}
+{"0":{"name":"GeekApp","isdefault":"yes","class":"\\GeekApp\\GeekApp"}}
