Fix critical bug with iumio Dispatch. Start iumio Task Bar

--- a/elements/config_files/apps.json
+++ b/elements/config_files/apps.json
@@ -1,1 +1,1 @@
-{"0":{"name":"GeekApp","isdefault":"yes","class":"\\GeekApp\\GeekApp"}}
+{"0":{"name":"WeApp","isdefault":"yes","class":"\\WeApp\\WeApp"}}
