introduce iumioTaskBar fully working

--- a/elements/config_files/apps.json
+++ b/elements/config_files/apps.json
@@ -1,1 +1,1 @@
-{"0":{"name":"WeApp","isdefault":"yes","class":"\\WeApp\\WeApp"}}
+{"0":{"name":"MiApp","isdefault":"yes","class":"\\MiApp\\MiApp"}}
