Fix app component directory with adding index.php

--- a/elements/config_files/apps.json
+++ b/elements/config_files/apps.json
@@ -1,1 +1,1 @@
-{}
+{"0":{"name":"AAApp","isdefault":"yes","class":"\\AAApp\\AAApp","creation":{"date":"2017-05-19 09:11:21.701013","timezone_type":3,"timezone":"UTC"},"update":{"date":"2017-05-19 09:11:21.701013","timezone_type":3,"timezone":"UTC"}}}
