--- a/elements/config_files/apps.json
+++ b/elements/config_files/apps.json
@@ -1,1 +1,1 @@
-{}
+{"0":{"name":"TestApp","isdefault":"yes","class":"\\TestApp\\TestApp","creation":{"date":"2017-05-19 09:17:58.899589","timezone_type":3,"timezone":"UTC"},"update":{"date":"2017-05-19 09:17:58.899589","timezone_type":3,"timezone":"UTC"}}}
