--- a/elements/config_files/apps.json
+++ b/elements/config_files/apps.json
@@ -9,7 +9,7 @@
             "timezone": "UTC"
         },
         "update": {
-            "date": "2017-06-02 08:16:01.371730",
+            "date": "2017-06-02 21:30:05.256421",
             "timezone_type": 3,
             "timezone": "UTC"
         }
@@ -24,14 +24,14 @@
             "timezone": "UTC"
         },
         "update": {
-            "date": "2017-05-29 07:59:33.250399",
+            "date": "2017-06-02 21:30:12.525847",
             "timezone_type": 3,
             "timezone": "UTC"
         }
     },
     "2": {
         "name": "TellMeApp",
-        "isdefault": "yes",
+        "isdefault": "no",
         "class": "\\TellMeApp\\TellMeApp",
         "creation": {
             "date": "2017-05-26 16:55:01.026926",
@@ -39,9 +39,24 @@
             "timezone": "UTC"
         },
         "update": {
-            "date": "2017-06-02 10:16:01.371766",
+            "date": "2017-06-02 23:30:12.525869",
             "timezone_type": 3,
             "timezone": "Europe\/Paris"
+        }
+    },
+    "3": {
+        "name": "WeApp",
+        "isdefault": "yes",
+        "class": "\\WeApp\\WeApp",
+        "creation": {
+            "date": "2017-06-03 17:03:34.743230",
+            "timezone_type": 3,
+            "timezone": "UTC"
+        },
+        "update": {
+            "date": "2017-06-03 17:03:34.743230",
+            "timezone_type": 3,
+            "timezone": "UTC"
         }
     }
 }
