--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ php:
   - '7.0'
   - '7.1'
 
-script: curl -X  http://localhost/iumio-framework/web/Dev.php
+script: curl -I  http://localhost/iumio-framework/web/Dev.php
