--- a/elements/config_files/apps.json
+++ b/elements/config_files/apps.json
@@ -1,32 +1,16 @@
 {
     "0": {
-        "name": "SApp",
+        "name": "AApp",
         "enabled": "yes",
         "prefix": "",
-        "class": "\\SApp\\SApp",
+        "class": "\\AApp\\AApp",
         "creation": {
-            "date": "2017-07-24 21:20:34.000000",
+            "date": "2017-07-25 06:53:10.000000",
             "timezone_type": 3,
             "timezone": "UTC"
         },
         "update": {
-            "date": "2017-07-24 21:46:22.000000",
-            "timezone_type": 3,
-            "timezone": "UTC"
-        }
-    },
-    "1": {
-        "name": "dsApp",
-        "enabled": "yes",
-        "prefix": "dd",
-        "class": "\\dsApp\\dsApp",
-        "creation": {
-            "date": "2017-07-24 21:35:57.000000",
-            "timezone_type": 3,
-            "timezone": "UTC"
-        },
-        "update": {
-            "date": "2017-07-24 21:35:57.000000",
+            "date": "2017-07-25 06:53:10.000000",
             "timezone_type": 3,
             "timezone": "UTC"
         }
