--- a/web/.htaccess
+++ b/web/.htaccess
@@ -31,8 +31,8 @@ DirectoryIndex Dev.php
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
 
-    #RewriteCond %{ENV:REDIRECT_STATUS} ^$
-    #RewriteRule ^Dev\.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]
+    RewriteCond %{ENV:REDIRECT_STATUS} ^$
+    RewriteRule ^Dev\.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]
 
 
     RewriteCond %{REQUEST_FILENAME} -f
