--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,25 @@
 {
     "name": "iumio/iumio-framework",
-    "license": "proprietary",
+    "license": "MIT",
     "type": "project",
+  "authors": [
+    {
+      "name": "Dany Rafina",
+      "email": "danyrafina@gmail.com",
+      "homepage": "https://www.linkedin.com/in/dany-rafina/",
+      "role": "Founder"
+    },
+    {
+      "name": "Kevin Huron",
+      "email": "khuron93@gmail.com",
+      "homepage": "http://kevinhuron.fr",
+      "role": "Co-Founder"
+    }
+  ],
+    "config" :
+    {
+        "vendor-dir" : "./vendor/libs/"
+    },
     "require": {
         "php": ">=7.0.0",
         "smarty/smarty": "~3.1",
@@ -9,13 +27,9 @@
         "components/font-awesome" : "~4.7.0",
         "components/jquery" : "~3.2.1"
     },
-    "config" :
-    {
-        "vendor-dir" : "vendor/libs/"
-    },
     "scripts": {
-        "post-install-cmd": "cp vendor/libs/fixes/smarty_internal_debug.php.iumio vendor/libs/fixes/smarty_internal_debug.php && mv vendor/libs/fixes/smarty_internal_debug.php vendor/libs/smarty/smarty/libs/sysplugins/ && mv vendor/libs/twbs/bootstrap/dist web/components/libs/bootstrap && mv vendor/libs/components/font-awesome web/components/libs/font-awesome &&  mv vendor/libs/components/jquery web/components/libs/jquery && rm -rf vendor/libs/twbs/ vendor/libs/components/jquery vendor/libs/composer/ vendor/libs/autoload.php vendor/libs/components",
-        "post-update-cmd":  "cp vendor/libs/fixes/smarty_internal_debug.php.iumio vendor/libs/fixes/smarty_internal_debug.php && mv vendor/libs/fixes/smarty_internal_debug.php vendor/libs/smarty/smarty/libs/sysplugins/ && mv vendor/libs/twbs/bootstrap/dist web/components/libs/bootstrap && mv vendor/libs/components/font-awesome web/components/libs/font-awesome &&  mv vendor/libs/components/jquery web/components/libs/jquery && rm -rf vendor/libs/twbs/ vendor/libs/components/jquery vendor/libs/composer/ vendor/libs/autoload.php vendor/libs/components"
+        "post-install-cmd": "cp ./vendor/libs/fixes/smarty_internal_debug.php.iumio ./vendor/libs/fixes/smarty_internal_debug.php && mv ./vendor/libs/fixes/smarty_internal_debug.php ./vendor/libs/smarty/smarty/libs/sysplugins/ && mv ./vendor/libs/twbs/bootstrap/dist/ ./web/components/libs/bootstrap && mv ./vendor/libs/components/font-awesome/ ./web/components/libs/font-awesome/ &&  mv ./vendor/libs/components/jquery/ ./web/components/libs/jquery/ && rm -rf ./vendor/libs/twbs/ ./vendor/libs/components/jquery ./vendor/libs/composer/ ./vendor/libs/autoload.php ./vendor/libs/components  &&  php ./vendor/iumio_framework/php/Core/Additional/Composer/Installer.php",
+        "post-update-cmd":  "cp ./vendor/libs/fixes/smarty_internal_debug.php.iumio ./vendor/libs/fixes/smarty_internal_debug.php && mv ./vendor/libs/fixes/smarty_internal_debug.php ./vendor/libs/smarty/smarty/libs/sysplugins/ && mv ./vendor/libs/twbs/bootstrap/dist/ ./web/components/libs/bootstrap && mv ./vendor/libs/components/font-awesome/ ./web/components/libs/font-awesome/ &&  mv ./vendor/libs/components/jquery/ ./web/components/libs/jquery/ && rm -rf ./vendor/libs/twbs/ ./vendor/libs/components/jquery ./vendor/libs/composer/ ./vendor/libs/autoload.php ./vendor/libs/components  &&  php ./vendor/iumio_framework/php/Core/Additional/Composer/Installer.php"
     }
 }
 
