--- a/elements/config_files/core/framework.config.json
+++ b/elements/config_files/core/framework.config.json
@@ -8,6 +8,6 @@
     "user": "danyrafina",
     "location": "\/Applications\/MAMP\/htdocs\/iumio-framework",
     "os": "Darwin",
-    "default_env": "prod",
+    "default_env": "dev",
     "api_auth_for": ["HelloApp",  "DocApp"]
 }
